tests/instantiating/invalid/range_property_invalid_type/bus.fbd
main bus
	foo config
		range = 1
